# jupyter-agent

./: .gitignore
rl/: .gitignore  PLAN.md  README.md  STAGE2_PLAN.md  grader.py  pyproject.toml
rl/_archive/ors/: server.py
rl/_archive/plans/: SWEEP_PLAN.md
rl/_archive/prepare-legacy/: KAGGLE_BUCKET.md  pick_three.py  stage_data.py
rl/_archive/rollouts/: run_qwen_scaling.sh  run_qwen_scaling_parallel.sh
rl/data/ablation/: REPORT.md
rl/data/ablation/closed-only/: decisions.csv  runs.csv
rl/data/ablation/mixed/: runs.csv  (+1 more)
rl/data/splits/: eval_ids.txt  eval_manifest.parquet  splits.yaml  train_ids.txt  train_manifest.parquet
rl/harbor_agents/: README.md  jupyter.py  kernel_server.py
rl/harbor_agents/_shared/: __init__.py  cost.py  cost_table.yaml  providers.py
rl/harbor_agents/bash/: __init__.py  agent.py
rl/harbor_agents/jupyter/: __init__.py  agent.py
rl/harbor_agents/seta/: __init__.py  agent.py
rl/ors/: list_tasks_helper.py  server.py  verdict.py
rl/prepare/: KAGGLE_BUCKET.md  build_eval_set.py  build_harbor_tasks.py  cache_dataset.py  fetch_all_kaggle.py  fetch_kaggle.py  llm_audit.py  patch_difficulty.py  push_harbor.py  replace_flagged.py  sweep.py
rl/rollouts/: rollout_openai.py  run_easy_4agents.sh  run_easy_both_agents.sh
rl/scripts/: 02_classify.py  03_build_splits.py  04_publish_splits.py  08_visualize.py  build_harbor_tasks.py  fetch_all_kaggle.py  run_finish_500.sh
rl/scripts/pipeline/: FLOW.md  README.md  buckets.py  build.py  categorize.py  cli.py  doctor.py  llm_client.py  orchestrator.py  regrade.py  state.py  verify.py
(+5 files in other folders)
